# Hands-on-VIO

./: .gitignore  README.md
hw1/: CMakeLists.txt
hw1/src/: R_Quaternion.cpp
hw2/course2_hw_new/: readme.md
hw2/course2_hw_new/vio-sim-ws/src/vio_data_simulation-ros_version/: CMakeLists.txt
hw2/course2_hw_new/vio-sim-ws/src/vio_data_simulation-ros_version/src/: imu.h  param.h
hw2/course2_hw_new/vio_data_simulation/src/: imu.cpp
hw2/course2_hw_new/ws_allan1/: .gitignore
hw2/course2_hw_new/ws_allan1/src/code_utils/: CMakeLists.txt
hw2/course2_hw_new/ws_allan1/src/imu_utils/: README.md
hw2/course2_hw_new/ws_allan1/src/imu_utils/data/: A3_imu_param.yaml  data_A3_acc_x.txt  data_A3_acc_y.txt  data_A3_acc_z.txt  data_A3_gyr_x.txt  data_A3_gyr_y.txt  data_A3_gyr_z.txt  data_A3_sim_acc_t.txt  data_A3_sim_acc_x.txt  data_A3_sim_acc_y.txt  data_A3_sim_acc_z.txt  data_A3_sim_gyr_t.txt  data_A3_sim_gyr_x.txt  data_A3_sim_gyr_y.txt  data_A3_sim_gyr_z.txt
hw2/course2_hw_new/ws_allan1/src/imu_utils/launch/: A3.launch
hw2/course2_hw_new/ws_allan1/src/imu_utils/scripts/: avg_of_all_sensors_acc.m  draw_allan_gyr_randomwalk.m  draw_allen_acc.m  draw_allen_acc_randomwalk.m  draw_allen_acc_whitenoise.m  draw_allen_gyr_white_noise.m
hw2/course2_hw_new/ws_allan1/src/imu_utils/src/: imu_an.cpp
hw3/CurveFitting_LM/app/: CurveFitting.cpp  miu_plot.py
hw3/CurveFitting_LM/backend/: problem.cc
hw4/course4作业/course4/nullspace_test/: hessian_nullspace_test.cpp
hw5/: hw5.odt
hw5/hw_course5_new/app/: CMakeLists.txt  TestMonoBA.cpp
hw5/hw_course5_new/backend/: problem.cc
(+6 files in other folders)
